k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: go-meta-redirector
  labels:
    name: go-meta-redirector
