k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-meta-redirector
  namespace: go-meta-redirector
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - go.pilab.hu
    - go.paalgyula.com
    - go.pira.hu
    secretName: go-meta-redirector-tls
  rules:
  - host: go.pilab.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-meta-redirector
            port:
              number: 80
  - host: go.paalgyula.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-meta-redirector
            port:
              number: 80
  - host: go.pira.hu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-meta-redirector
            port:
              number: 80
